# cs417-examples

./: .dockerignore  .gitignore  Dockerfile  README.md  prime_generation_python_vs_rust.md  rename.sh
00-Arbitrary-Precision-Demo-CPP/: makefile  precisionDemo.cpp
01-Close-To-Zero-Rust/: Cargo.toml
01-Sqrt-CPP/: sqrt_demo.cpp
02-Cleve-Moler-CPP/: makefile  precisionEstimate.cpp
02-Cleve-Moler-Python/: cleve_moler.py
02-Cleve-Moler-Rust/: README.md
03-Addition-Order-Rust/: Cargo.toml
30-Non-Linear-Equation-Solvers-Rust/: Cargo.toml
30-Non-Linear-Equation-Solvers-Rust/src/: errors.rs  iterators.rs  loop_monoliths.rs  main.rs
30-NonLinearEquationSolvers-Rust/: rustfmt.toml
40-Monte-Carlo-Integration-Python/: pyproject.toml
40-Monte-Carlo-Integration-Rust/: Cargo.toml
40-Monte-Carlo-Integration-Rust/src/: main.rs
Arbitrary-Precision-Demo-Rust/: Cargo.toml
ArbitraryPrecision-Time-Dilation/: .gitignore
ArbitraryPrecisionDiscussion/: .gitignore
Average-Demo-Python/: average_demo.py
Cleve-Moler-Python/: estimate_precision.py
Cleve-Moler-Rust/: Cargo.toml
Close-To-Zero-CPP/: close_to_zero.cpp  makefile
Close-To-Zero-Python/: close_to_zero.py
DividedDifferences/: divided_differences.py
FPvsArbitraryPrecision/: .gitignore
MonteCarloIntegration/: monte_carlo_integration.py
MonteCarloIntegration-Python/: log.txt
MonteCarloIntegration-Rust/: Cargo.toml
NonLinearEquationSolvers/: run_solvers.py  solvers.py
NumPy-Prime-Generation/: times.md
Prime-Generation-Python-NumPy/: prime_generation_naive_vs_sieve.md
Sqrt-CPP/: makefile
(+102 files in other folders)
